Added patch routes
