# API/src/controllers/components/CPUComponentsController.ts
@@ -32,6 +32,7 @@ const createCPUComponent = async (
 	req: Request,
 	res: Response
 ): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
 	try {
 		const cpuComponent: ICPUComponent = await CPUComponent.create(req.body);
 		res.status(201).json(cpuComponent);
@@ -41,8 +42,34 @@ const createCPUComponent = async (
 	}
 };
 
+const updateCPUComponent = async (
+	req: Request,
+	res: Response
+): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
+	if (!req.params.id) {
+		res.status(400).json({ message: 'No ID provided' });
+		return;
+	}
+	try {
+		const cpuComponent: ICPUComponent | null = await CPUComponent.findById(
+			req.params.id
+		);
+		if (!cpuComponent) {
+			res.status(404).json({ message: 'CPU Component not found' });
+		} else {
+			const updatedCPUComponent: ICPUComponent | null =
+				await CPUComponent.findByIdAndUpdate(req.params.id, req.body, {
+					new: true,
+				});
+			res.status(200).json(updatedCPUComponent);
+		}
+	} catch (error: any) {}
+};
+
 export default {
 	getAllCPUComponents,
 	getCPUComponentById,
 	createCPUComponent,
+	updateCPUComponent,
 };
