# API/src/controllers/components/GPUComponentsController.ts
@@ -32,6 +32,7 @@ const createGPUComponent = async (
 	req: Request,
 	res: Response
 ): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
 	try {
 		const gpuComponent: IGPUComponent = await GPUComponent.create(req.body);
 		res.status(201).json(gpuComponent);
@@ -41,8 +42,36 @@ const createGPUComponent = async (
 	}
 };
 
+const updateGPUComponent = async (
+	req: Request,
+	res: Response
+): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
+	if (!req.params.id) {
+		res.status(400).json({ message: 'No ID provided' });
+		return;
+	}
+	try {
+		const gpuComponent: IGPUComponent | null = await GPUComponent.findById(
+			req.params.id
+		);
+		if (!gpuComponent) {
+			res.status(404).json({ message: 'Component not found' });
+			return;
+		}
+		const updatedGPUComponent: IGPUComponent | null =
+			await GPUComponent.findByIdAndUpdate(req.params.id, req.body, {
+				new: true,
+			});
+		res.status(200).json(updatedGPUComponent);
+	} catch (error: any) {
+		res.status(500).json({ message: error.message });
+	}
+};
+
 export default {
 	getAllGPUComponents,
 	getGPUComponentById,
 	createGPUComponent,
+	updateGPUComponent,
 };
