# API/src/controllers/components/RAMComponentsController.ts
@@ -35,6 +35,7 @@ const createRAMComponent = async (
 	req: Request,
 	res: Response
 ): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
 	try {
 		const ramComponent: IRAMComponent = await RAMComponent.create(req.body);
 		res.status(201).json(ramComponent);
@@ -44,4 +45,36 @@ const createRAMComponent = async (
 	}
 };
 
-export default { getAllRAMComponents, getRAMComponentById, createRAMComponent };
+const updateRAMComponent = async (
+	req: Request,
+	res: Response
+): Promise<void> => {
+	/* #swagger.security = [{"bearerAuth": []}] */
+	if (!req.params.id) {
+		res.status(400).json({ message: 'No ID provided' });
+		return;
+	}
+	try {
+		const ramComponent: IRAMComponent | null = await RAMComponent.findById(
+			req.params.id
+		);
+		if (!ramComponent) {
+			res.status(404).json({ message: 'RAM component not found' });
+		} else {
+			const updatedRAMComponent: IRAMComponent | null =
+				await RAMComponent.findByIdAndUpdate(req.params.id, req.body, {
+					new: true,
+				});
+			res.status(200).json(updatedRAMComponent);
+		}
+	} catch (error: any) {
+		res.status(500).json({ message: error.message });
+	}
+};
+
+export default {
+	getAllRAMComponents,
+	getRAMComponentById,
+	createRAMComponent,
+	updateRAMComponent,
+};
