# API/src/routes/api/v1/components/gpu.ts
@@ -1,13 +1,17 @@
 import express, { Express, Request, Response } from 'express';
 import GPUComponentsController from '../../../../controllers/components/GPUComponentsController';
+import auth from '../../../../middleware/auth';
 
 const router = express.Router();
 
-router.route('/:id').get(GPUComponentsController.getGPUComponentById);
+router
+	.route('/:id')
+	.get(GPUComponentsController.getGPUComponentById)
+	.patch(auth, GPUComponentsController.updateGPUComponent);
 
 router
 	.route('/')
 	.get(GPUComponentsController.getAllGPUComponents)
-	.post(GPUComponentsController.createGPUComponent);
+	.post(auth, GPUComponentsController.createGPUComponent);
 
 export const GPUComponents = router;
